[tool.poetry]
name = "geneweaver-testing"
version = "0.0.2b2"
description = "A library to standardize testing of GeneWeaver pacakges."
authors = ["Alexander Berger <alexander.berger@jax.org>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://bergsalex.github.io/geneweaver-docs/"
repository = "https://github.com/bergsalex/geneweaver-testing"
packages = [
    { include = "geneweaver/testing", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
ruff = "^0.0.277"
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.4.0"
mypy = "^1.4.1"
tomli = "^2.0.1"
pytest-cov = "^4.1.0"

[tool.ruff]
select = ['F', 'E', 'W', 'A', 'C90', 'N', 'B', 'ANN', 'D', 'I', 'ERA', 'PD', 'NPY', 'PT']

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN001", "ANN201"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
